--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
+    "@expo/webpack-config": "18.0.1",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-firebase/app": "^20.1.0",
     "@react-native-firebase/auth": "^20.1.0",
@@ -21,7 +22,9 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "bcryptjs": "^2.4.3",
+    "buffer": "^6.0.3",
     "compromise": "^14.13.0",
+    "crypto-browserify": "^3.12.0",
     "expo": "~51.0.17",
     "expo-build-properties": "~0.12.3",
     "expo-dev-client": "~4.0.21",
@@ -39,12 +42,14 @@
     "expo-status-bar": "~1.12.1",
     "expo-updates": "~0.25.18",
     "fuse.js": "^7.0.0",
+    "https-browserify": "^1.0.0",
     "lottie-react-native": "6.7.0",
     "mongoose-fuzzy-searching": "^1.3.4",
     "nanoid": "^5.0.7",
+    "os-browserify": "^0.3.0",
     "react": "18.2.0",
     "react-content-loader": "^7.0.2",
-    "react-dom": "^18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.74.2",
     "react-native-cache": "^2.0.3",
     "react-native-dotenv": "^3.4.11",
@@ -61,11 +66,14 @@
     "react-native-screens": "^3.31.1",
     "react-native-svg": "^15.7.1",
     "react-native-tab-view": "^3.5.2",
-    "react-native-web": "~0.19.12",
+    "react-native-web": "~0.18.10",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.4",
     "yup": "^1.4.0"
   },
   "devDependencies": {
