--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "redux-thunk": "^3.1.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
+    "sweetalert2": "^11.14.2",
     "url": "^0.11.4",
     "yup": "^1.4.0"
   },
