--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-elements": "^3.4.3",
     "react-native-extra-dimensions-android": "^1.2.5",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.16.1",
     "react-native-image-crop-picker": "^0.41.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
@@ -66,6 +67,7 @@
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
+    "react-native-share": "^12.0.11",
     "react-native-svg": "^15.7.1",
     "react-native-tab-view": "^3.5.2",
     "react-native-web": "~0.18.10",
@@ -77,6 +79,7 @@
     "stream-http": "^3.2.0",
     "sweetalert2": "^11.14.2",
     "url": "^0.11.4",
+    "xlsx": "^0.18.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
